--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,8 @@
+popup.html:
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Time Tracker</title>
-</head>
-<body>
-  <button id="toggle-button">Start/Stop Timer</button>
-  <script src="popup.js"></script>
-</body>
+  <body>
+    <button id="toggle-button">Start/Stop</button>
+    <script src="popup.js"></script>
+  </body>
 </html>
